mudanças nos representantes existentes

--- a/mapas.html
+++ b/mapas.html
@@ -718,7 +718,7 @@
         if (uf === 'al') { html = 'de Alagoas'; }
         if (uf === 'am') { html = 'do Amazonas';
                            rep_nome[0] = 'Altenor Gonçalves da Silva';
-                           rep_local[0] = 'Rua das Araras nº 46, Bairro Ponta Negra, CEP: 69037-300, Manaus- AM';
+                           rep_local[0] = 'Rua das Araras nº 12, Bairro Ponta Negra, CEP: 69037-300, Manaus- AM';
                            rep_email[0] = 'altenor@gmail.com';
                            rep_telefone[0] = '(92) 99272-7374';
                           }
@@ -764,7 +764,7 @@
                            rep_email[0] = 'tandy_lima@icloud.com';
                            rep_telefone[0] = '(17) 99628-4420'; 
                            rep_nome[1] = 'Cristiane Medeiros Morales Mangini';
-                           rep_local[1] = 'Rua Atílio Capello 800, Bloco 1, Apto 107 São José do Rio Preto - SP CEP: 15051-003';
+                           rep_local[1] = 'Rua Antônio José Martins Filho 600, Apto 13 Córdoba CEP: 15092-230, São José do Rio Preto – SP';
                            rep_email[1] = 'cristiane.medeiros2@icloud.com';
                            rep_telefone[1] = '(17) 99741-3370'; 
                            rep_nome[2] = 'Edson Bispo';
@@ -814,22 +814,22 @@
                            rep_telefone[2] = '(84) 98169-6129'; 
                            rep_nome[3] = 'Paulo Victor de Mesquita';
                            rep_local[3] = 'Rua Amélia Galvão, nº90. Lagoa do Mato, Mossoró-RN';
-                           rep_email[3] = 'aepdemesquita@gmail.com';
+                           rep_email[3] = 'jspsolucoes.negocios@gmail.com';
                            rep_telefone[3] = '(84) 98745-8834'; 
                            rep_nome[4] = 'Eliorefe Saldanha De Oliveira';
                            rep_local[4] = 'Rua Amendoeira, 999 apto 201, nova Parnamirim (cidade verde)';
                            rep_email[4] = 'eliorefesaldanha@icloud.com';
                            rep_telefone[4] = '(84) 99803-2909'; 
                            rep_nome[5] = 'Alberto Alves Rodrigues';
-                           rep_local[5] = 'Rua Joaquim Nabuco 806, CEP: 59600300';
+                           rep_local[5] = 'Rua Joaquim Nabuco 806, Mossoró CEP: 59600300';
                            rep_email[5] = 'alberto.a.rodrigues2013@gmail.com';
                            rep_telefone[5] = '(85) 99416-4741'; 
                            rep_nome[6] = 'Weiner Kiney Lima da Silva';
-                           rep_local[6] = 'N/A';
+                           rep_local[6] = 'AV. Afonso Pena 1199, Ap 902 Tirol Natal-RN';
                            rep_email[6] = 'santapollinare.weiner@gmail.com';
                            rep_telefone[6] = '(84) 98155-8605'; 
                            rep_nome[7] = 'Cordimar Braga de Azevedo';
-                           rep_local[7] = 'N/A';
+                           rep_local[7] = 'COND. EMPRESARIAL MIGUEL SEABRA FAGUNDES – Sala 804 - Rua Paulo Barros de Goes, 1840 – Lagoa Nova - CEP: 59064-460 / Natal-RN';
                            rep_email[7] = 'cordimar.braga@grupofan.com';
                            rep_telefone[7] = '(84) 98188-0020'; 
       }
