--- a/index.html
+++ b/index.html
@@ -174,75 +174,7 @@
     </nav>
 
     <div class="container-fluid p-0 wow fadeIn" data-wow-delay="0.1s">
-      <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="w-100" src="img/principal1.jpg" alt="Image" />
-            <div class="carousel-caption">
-              <div class="container" style="margin-top: 12%;">
-                <div class="row">
-                  <div class="col-12 col-lg-6">
-                    <h1 class="display-3 text-dark mb-4 animated slideInDown">
-                      Acumulamos mais de 10 anos no mercado
-                    </h1>
-                    <div style="background-color: #15233c">
-                    <p class="fs-7 mb-5" style="
-                    margin-top: 10px;
-                    margin-bottom: 10px;
-                    margin-right: 10px;
-                    margin-left: 10px;
-                    color: white; background-color: #15233c; text-align: justify; font-weight: bold;font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
-                      Acreditamos na educação como o pilar para um desenvolvimento mais sustentável, através dos nossos projetos
-                      influênciamos no processo de ensino aprendizagem dos jovens de uma forma mais lúdica e tecnológica, trazendo 
-                      sempre soluções inteligentes para quem precisa potencializar a qualidade e os índices da educação nas redes e sistemas de ensino.
-                    </p>
-                    </div>
-                    <!-- <a href="" class="btn btn-primary py-3 px-5" style="border-color: #F58634; background-color: #F58634;"> 
-                      Ver
-                    </a>-->
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="w-100" src="img/principal2.jpg" alt="Image" />
-            <div class="carousel-caption">
-              <div class="container">
-                <div class="row">
-                  <!-- <div class="col-12 col-lg-6"> 
-                    <h1 class="display-3 text-dark mb-4 animated slideInDown">
-                      Feeling 2
-                    </h1>
-                    <p class="fs-5 text-body mb-5">
-                      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    </p>
-                    <a href="" class="btn btn-primary py-3 px-5"
-                      >Ver</a
-                    >
-                  </div> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#header-carousel"
-          data-bs-slide="prev"
-        >
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#header-carousel"
-          data-bs-slide="next"
-        >
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/lCOb0UejW6M?si=hxN7GX5Xf-hb4Oeg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 
     <div class="container-fluid py-5" style="background-color: #F58634;">
