--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+
+    <style>
+      body {
+          text-align: center;
+      }
+
+      h1 {
+          color: green;
+      }
+
+      .auto {
+          height: auto;
+          background-color: orange;
+      }
+
+      .inherit {
+          height: inherit;
+          background-color: cyan;
+      }
+  </style>
     <meta charset="utf-8" />
     <title>Feeling</title>
     
@@ -173,8 +193,10 @@
       </div>
     </nav>
 
-    <div class="container-fluid p-0 wow fadeIn" data-wow-delay="0.1s">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/lCOb0UejW6M?si=hxN7GX5Xf-hb4Oeg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <div class="auto">
+      <video id="vid" width="100%" height="100%" autoplay muted controls>
+        <source src="video/Institucional.mp4" type="video/mp4">
+      </video>
     </div>
 
     <div class="container-fluid py-5" style="background-color: #F58634;">
