--- a/obrigado.html
+++ b/obrigado.html
@@ -85,11 +85,11 @@
         <div class="col-lg-7 px-5 text-start">
           <div class="h-100 d-inline-flex align-items-center me-4">
             <small class="fa fa-phone-alt me-2"></small>
-            <small>(84)99913-8890 / (84)99452-2888</small>
+            <small>(84)99913-8890 | (84)99452-2888 | (84) 99190-4664 | (84) 2020-9908</small>
           </div>
           <div class="h-100 d-inline-flex align-items-center me-4">
             <small class="far fa-envelope-open me-2"></small>
-            <small>comercial@feelingholding.com.br</small>
+            <small>comercial@feelingholding.com</small>
           </div>
         </div>
         <!--
@@ -198,8 +198,8 @@
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Endereço</h5>
             <p style="color: white;"><i class="fa fa-map-marker-alt me-3"></i>COND. EMPRESARIAL MIGUEL SEABRA FAGUNDES – Salas 804 - Rua Paulo Barros de Goes, 1840 – Lagoa Nova - CEP: 59064-460 / Natal-RN</p>
-            <p style="color: white;"><i class="fa fa-phone-alt me-3"></i>(84)99913-8890 / (84)99452-2888</p>
-            <p style="color: white;"><i class="fa fa-envelope me-3"></i>comercial@feelingholding.com.br</p>
+            <p style="color: white;"><i class="fa fa-phone-alt me-3"></i>(84)99913-8890 | (84)99452-2888 | (84) 99190-4664 | (84) 2020-9908</p>
+            <p style="color: white;"><i class="fa fa-envelope me-3"></i>comercial@feelingholding.com</p>
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Menu</h5>
