All maps changes

--- a/mapas.html
+++ b/mapas.html
@@ -712,49 +712,55 @@
         document.getElementById("box7").style = 'Display: none;';
         document.getElementById("box8").style = 'Display: none;';
 
-        if (uf === 'ba') { html = 'da Bahia';}
-        if (uf === 'se') { html = 'do Sergipe'; }
+        if (uf === 'ba') { html = 'da Bahia';
+                           rep_nome[0] = 'MARCOS JOSÉ DA SILVA';
+                           rep_local[0] = 'RUA GUADALAJARA 62, CENTRO - BARREIRAS – BA cep: 47800-020';
+                           rep_email[0] = 'marcbarreiras001@gmail.com';
+                           rep_telefone[0] = '(77) 99115-3622'; 
+                           rep_nome[1] = 'Antônio Márcio de Araujo Silva';
+                           rep_local[1] = 'Rua Ananias Azevedo 186 galeria Center Treze Mall loja Grão Nobre, Aracaju-SE, CEP: 49.020-085';
+                           rep_email[1] = 'ARAUJO.CWB07@GMAIL.COM';
+                           rep_telefone[1] = '(82) 99697-4023';
+      }
+        if (uf === 'se') { html = 'do Sergipe'; 
+                           rep_nome[0] = 'Antônio Márcio de Araujo Silva';
+                           rep_local[0] = 'Rua Ananias Azevedo 186 galeria Center Treze Mall loja Grão Nobre, Aracaju-SE, CEP: 49.020-085';
+                           rep_email[0] = 'ARAUJO.CWB07@GMAIL.COM';
+                           rep_telefone[0] = '(82) 99697-4023';      
+      }
         if (uf === 'pe') { html = 'de Pernambuco'; }
-        if (uf === 'al') { html = 'de Alagoas'; }
+        if (uf === 'al') { html = 'de Alagoas'; 
+                           rep_nome[0] = 'Antônio Márcio de Araujo Silva';
+                           rep_local[0] = 'Rua Ananias Azevedo 186 galeria Center Treze Mall loja Grão Nobre, Aracaju-SE, CEP: 49.020-085';
+                           rep_email[0] = 'ARAUJO.CWB07@GMAIL.COM';
+                           rep_telefone[0] = '(82) 99697-4023'; }
         if (uf === 'am') { html = 'do Amazonas';
                            rep_nome[0] = 'Altenor Gonçalves da Silva';
                            rep_local[0] = 'Rua das Araras nº 12, Bairro Ponta Negra, CEP: 69037-300, Manaus- AM';
                            rep_email[0] = 'altenor@gmail.com';
                            rep_telefone[0] = '(92) 99272-7374';
+                           rep_nome[1] = 'Paulo Andre';
+                           rep_local[1] = 'Av. Coronel Savio Belota, nº81, QD 366 CJ CN ET 4N – CEP: 69.098-270 – Bairro: Novo Aleixo, Manaus/AM';
+                           rep_email[1] = 'mp10rep@gmail.com';
+                           rep_telefone[1] = '(92) 98561–0000';
                           }
-        if (uf === 'pa') { html = 'do Pará'; 
-                           rep_nome[0] = 'Francilene Tavares de Oliveira';
-                           rep_local[0] = 'Psg São Jerônimo, 101 – Bairro: Agulha (Icoaraci) Cep. 66.811-140. Belém/PA';
-                           rep_email[0] = 'nacionalrepresentacao@uol.com.br';
-                           rep_telefone[0] = '(85) 98933-0489';
-      }
+        if (uf === 'pa') { html = 'do Pará';}
         if (uf === 'mt') { html = 'do Mato Grosso'; 
                            rep_nome[0] = 'Fabio Henrique de Matos';
                            rep_local[0] = 'Rua Trinta e Quatro (S Cruz II), 442 – Quadra 78 LT A3 – Bairro: Santa Cruz II – Cep. 78.077-020 Cuiabá/MT';
                            rep_email[0] = 'N/A';
                            rep_telefone[0] = '(65) 99251-5818'; 
       }
-        if (uf === 'ro') { html = 'de Rondônia'; }
+        if (uf === 'ro') { html = 'de Rondônia'; 
+                           rep_nome[0] = 'Gustavo Rosa';
+                           rep_local[0] = 'Rua Álvaro Maia, 2005, Bairro São Cristóvão CEP: 76804-064 Porto Velho – RO';
+                           rep_email[0] = 'grengenhariaro@gmail.com';
+                           rep_telefone[0] = '(66) 99281-8187';
+      }
+                          
         if (uf === 'ac') { html = 'do Acre'; }
         if (uf === 'ap') { html = 'do Amapá'; }
-        if (uf === 'rj') { html = 'do Rio de Janeiro'; 
-                           rep_nome[0] = 'Carla Mariano Fernandes';
-                           rep_local[0] = 'Rua Celso Queiroz 722, Casa 5 Bairro Santa Catarina São Gonçalo, RJ CEP: 24412-260';
-                           rep_email[0] = 'Dir.carla@gmail.com';
-                           rep_telefone[0] = '(21) 99090-0095'; 
-                           rep_nome[1] = 'Luiz Natal Gatto';
-                           rep_local[1] = 'CTC CIDADE NOVA RJ PL2 AV SEN DOUTEL DE ANDRADE 1301 PAPUCAIA 28695-000 CACHOEIRAS DE MACACU - RJ';
-                           rep_email[1] = 'alngatto@gmail.com';
-                           rep_telefone[1] = '(21) 98399-2763'; 
-                           rep_nome[2] = 'Erasmo de Oliveira Leitão';
-                           rep_local[2] = 'Rua Campo Formoso, nº 524, Casa 01, Bairro Guaratiba CEP: 23036-140 Rio de Janeiro - RJ';
-                           rep_email[2] = 'erasmoleitaoadv@gmail.com';
-                           rep_telefone[2] = '(21) 99566-1968'; 
-                           rep_nome[3] = 'Gustavo Teles da Rosa';
-                           rep_local[3] = 'Rua Álvaro Maia, 2005, Bairro São Cristóvão CEP: 76804-064 Porto Velho - RJ';
-                           rep_email[3] = 'grengenhariaro@gmail.com';
-                           rep_telefone[3] = '(66) 99281-8187'; 
-                          }
+        if (uf === 'rj') { html = 'do Rio de Janeiro'; }
         if (uf === 'rs') { html = 'do Rio Grande do Sul'; }
         if (uf === 'sc') { html = 'de Santa Catarina'; }
         if (uf === 'pr') { html = 'do Paraná'; }
@@ -781,11 +787,7 @@
                            rep_nome[0] = 'Antonio Roberto Campos Lobo';
                            rep_local[0] = 'Rua Celso Gomes 188 Centro, Iracema-CE CEP: 62980-000';
                            rep_email[0] = 'maestrorobertocampos@gmail.com';
-                           rep_telefone[0] = '(88) 99714-4747'; 
-                           rep_nome[1] = 'Vangillye Carvaho Pereira';
-                           rep_local[1] = 'Rua Isaias Domingos da Silveira 240 Bairro: De Lourdes CEP: 60177-180';
-                           rep_email[1] = 'vangillye@hotmail.com';
-                           rep_telefone[1] = '(85) 98533-5623';             
+                           rep_telefone[0] = '(88) 99714-4747';           
       }
         if (uf === 'rr') { html = 'de Roraima'; }
         if (uf === 'to') { html = 'do Tocantins'; }
@@ -804,48 +806,32 @@
                            rep_local[0] = 'Rua Mozart Emanoel Calafange, 57 - Bosque das Palmeiras - Canguaretama RN CEP: 59.190-000';
                            rep_email[0] = 'doisb.distribuidora@hotmail.com';
                            rep_telefone[0] = '(84) 99942-2228'; 
-                           rep_nome[1] = 'Edson Xavier de Lira';
-                           rep_local[1] = 'Rua Primaveras, 143, bairro Bela Vista cep 59280-000 Parnamirim. Ponto de referência: acesso pela rua do ct do América';
-                           rep_email[1] = 'superlirarepresentacoes@gmail.com';
-                           rep_telefone[1] = '(84) 98177-8647'; 
-                           rep_nome[2] = 'Francisco Yataanderson de Araujo Felipe';
-                           rep_local[2] = 'Rua Ana Bezerra Maia, Casa nº623, Bairro Centro CEP:59410-000 Barcelona-RN';
-                           rep_email[2] = 'yataanderson77@hotmail.com';
-                           rep_telefone[2] = '(84) 98169-6129'; 
-                           rep_nome[3] = 'Paulo Victor de Mesquita';
-                           rep_local[3] = 'Rua Amélia Galvão, nº90. Lagoa do Mato, Mossoró-RN';
-                           rep_email[3] = 'jspsolucoes.negocios@gmail.com';
-                           rep_telefone[3] = '(84) 98745-8834'; 
-                           rep_nome[4] = 'Eliorefe Saldanha De Oliveira';
-                           rep_local[4] = 'Rua Amendoeira, 999 apto 201, nova Parnamirim (cidade verde)';
-                           rep_email[4] = 'eliorefesaldanha@icloud.com';
-                           rep_telefone[4] = '(84) 99803-2909'; 
-                           rep_nome[5] = 'Alberto Alves Rodrigues';
-                           rep_local[5] = 'Rua Joaquim Nabuco 806, Mossoró CEP: 59600300';
-                           rep_email[5] = 'alberto.a.rodrigues2013@gmail.com';
-                           rep_telefone[5] = '(85) 99416-4741'; 
-                           rep_nome[6] = 'Weiner Kiney Lima da Silva';
-                           rep_local[6] = 'AV. Afonso Pena 1199, Ap 902 Tirol Natal-RN';
-                           rep_email[6] = 'santapollinare.weiner@gmail.com';
-                           rep_telefone[6] = '(84) 98155-8605'; 
-                           rep_nome[7] = 'Cordimar Braga de Azevedo';
-                           rep_local[7] = 'COND. EMPRESARIAL MIGUEL SEABRA FAGUNDES – Sala 804 - Rua Paulo Barros de Goes, 1840 – Lagoa Nova - CEP: 59064-460 / Natal-RN';
-                           rep_email[7] = 'cordimar.braga@grupofan.com';
-                           rep_telefone[7] = '(84) 98188-0020'; 
+                           rep_nome[1] = 'Paulo Victor de Mesquita';
+                           rep_local[1] = 'Rua cel. Silvino Bezerra, 1274, Lagoa Seca, Natal RN';
+                           rep_email[1] = 'fleuder@hotmail.com';
+                           rep_telefone[1] = '84 98827-7007'; 
+                           rep_nome[2] = 'Alexandre Rocha';
+                           rep_local[2] = 'Rua Amendoeira, 999 apto 201, nova Parnamirim (cidade verde)';
+                           rep_email[2] = 'eliorefesaldanha@icloud.com';
+                           rep_telefone[2] = '(84) 99803-2909'; 
+                           rep_nome[3] = 'Alberto Alves Rodrigues';
+                           rep_local[3] = 'Rua Joaquim Nabuco 806, Mossoró CEP: 59600300';
+                           rep_email[3] = 'alberto.a.rodrigues2013@gmail.com';
+                           rep_telefone[3] = '(85) 99416-4741'; 
+                           rep_nome[4] = 'Weiner Kiney Lima da Silva';
+                           rep_local[4] = 'AV. Afonso Pena 1199, Ap 902 Tirol Natal-RN';
+                           rep_email[4] = 'santapollinare.weiner@gmail.com';
+                           rep_telefone[4] = '(84) 98155-8605'; 
+                           rep_nome[5] = 'Cordimar Braga de Azevedo';
+                           rep_local[5] = 'COND. EMPRESARIAL MIGUEL SEABRA FAGUNDES – Sala 804 - Rua Paulo Barros de Goes, 1840 – Lagoa Nova - CEP: 59064-460 / Natal-RN';
+                           rep_email[5] = 'cordimar.braga@grupofan.com';
+                           rep_telefone[5] = '(84) 98188-0020'; 
       }
         if (uf === 'pb') { html = 'da Paraíba'; 
-                           rep_nome[0] = 'Roberta Cristina Soares de Souza';
-                           rep_local[0] = 'AV PRINCESA ISABEL, 773, CENTRO, João Pessoa - PB, CEP: 58.013-251';
-                           rep_email[0] = 'rcristinaapg@hotmail.com';
-                           rep_telefone[0] = '(83) 99927-0661'; 
-                           rep_nome[1] = 'Marco Tulio Farias de Brito';
-                           rep_local[1] = 'Rua Maria Eliete de Coutinho Fabrício, 27 – Sala 207 – Bairro: Bancários – Cep. 58.051-600. João Pessoa/PB';
-                           rep_email[1] = 'Marcotuliofb2020@gmail.com';
-                           rep_telefone[1] = '(83) 99189-6558';
-                           rep_nome[2] = 'Jaciara Linhares Alves Pereira';
-                           rep_local[2] = 'N/A';
-                           rep_email[2] = 'jaciara17vd@gmail.com';
-                           rep_telefone[2] = '(82) 98602-8185';                      
+                           rep_nome[0] = 'UBIRATAN LEAL DE OLIVEIRA';
+                           rep_local[0] = 'RUA ANA VILAR, 758, CRUZEIRO, CAMPINA GRANDE, PARAÍBA CEP 58.415-625';
+                           rep_email[0] = 'ULOREPRESENTACOESLTDA@GMAIL.COM';
+                           rep_telefone[0] = '(83) 98738-5019';                 
       }
         if (uf === 'df') { html = 'do Distrito Federal'; }
         
