Changes on representative: new representative change location of representative

--- a/mapas.html
+++ b/mapas.html
@@ -721,6 +721,10 @@
                            rep_local[1] = 'Rua Ananias Azevedo 186 galeria Center Treze Mall loja Grão Nobre, Aracaju-SE, CEP: 49.020-085';
                            rep_email[1] = 'ARAUJO.CWB07@GMAIL.COM';
                            rep_telefone[1] = '(82) 99697-4023';
+                           rep_nome[2] = 'Andressa Ribeiro de Novaes';
+                           rep_local[2] = 'Rua Luiz Gonzaga, Loteamento São Paulo, Barreiras CEP 47807067';
+                           rep_email[2] = 'andressa.novaes13@outlook.com';
+                           rep_telefone[2] = '';
       }
         if (uf === 'se') { html = 'do Sergipe'; 
                            rep_nome[0] = 'Antônio Márcio de Araujo Silva';
@@ -735,21 +739,25 @@
                            rep_email[0] = 'ARAUJO.CWB07@GMAIL.COM';
                            rep_telefone[0] = '(82) 99697-4023'; }
         if (uf === 'am') { html = 'do Amazonas';
-                           rep_nome[0] = 'Altenor Gonçalves da Silva';
-                           rep_local[0] = 'Rua das Araras nº 12, Bairro Ponta Negra, CEP: 69037-300, Manaus- AM';
-                           rep_email[0] = 'altenor@gmail.com';
-                           rep_telefone[0] = '(92) 99272-7374';
-                           rep_nome[1] = 'Paulo Andre';
-                           rep_local[1] = 'Av. Coronel Savio Belota, nº81, QD 366 CJ CN ET 4N – CEP: 69.098-270 – Bairro: Novo Aleixo, Manaus/AM';
-                           rep_email[1] = 'mp10rep@gmail.com';
-                           rep_telefone[1] = '(92) 98561–0000';
+                           rep_nome[0] = 'Paulo Andre';
+                           rep_local[0] = 'Av. Coronel Savio Belota, nº81, QD 366 CJ CN ET 4N – CEP: 69.098-270 – Bairro: Novo Aleixo, Manaus/AM';
+                           rep_email[0] = 'mp10rep@gmail.com';
+                           rep_telefone[0] = '(92) 98561–0000';
                           }
         if (uf === 'pa') { html = 'do Pará';}
         if (uf === 'mt') { html = 'do Mato Grosso'; 
                            rep_nome[0] = 'Fabio Henrique de Matos';
                            rep_local[0] = 'Rua Trinta e Quatro (S Cruz II), 442 – Quadra 78 LT A3 – Bairro: Santa Cruz II – Cep. 78.077-020 Cuiabá/MT';
                            rep_email[0] = 'N/A';
-                           rep_telefone[0] = '(65) 99251-5818'; 
+                           rep_telefone[0] = '(65) 99251-5818'
+                           rep_nome[1] = 'Thámerson Alves lima de Jesus';
+                           rep_local[1] = 'Endereço: Rua São João N: 245. Centro São João de Iracema CEP: 15315000';
+                           rep_email[1] = 'tandy_lima@icloud.com';
+                           rep_telefone[1] = '(17) 99628-4420'; 
+                           rep_nome[2] = 'Cristiane Medeiros Morales Mangini';
+                           rep_local[2] = 'Rua Antônio José Martins Filho 600, Apto 13 Córdoba CEP: 15092-230, São José do Rio Preto – SP';
+                           rep_email[2] = 'cristiane.medeiros2@icloud.com';
+                           rep_telefone[2] = '(17) 99741-3370';; 
       }
         if (uf === 'ro') { html = 'de Rondônia'; 
                            rep_nome[0] = 'Gustavo Rosa';
@@ -758,7 +766,12 @@
                            rep_telefone[0] = '(66) 99281-8187';
       }
                           
-        if (uf === 'ac') { html = 'do Acre'; }
+        if (uf === 'ac') { html = 'do Acre'; 
+                           rep_nome[0] = 'Paulo Andre';
+                           rep_local[0] = 'Av. Coronel Savio Belota, nº81, QD 366 CJ CN ET 4N – CEP: 69.098-270 – Bairro: Novo Aleixo, Manaus/AM';
+                           rep_email[0] = 'mp10rep@gmail.com';
+                           rep_telefone[0] = '(92) 98561–0000';
+      }
         if (uf === 'ap') { html = 'do Amapá'; }
         if (uf === 'rj') { html = 'do Rio de Janeiro'; }
         if (uf === 'rs') { html = 'do Rio Grande do Sul'; }
@@ -776,20 +789,50 @@
                            rep_nome[2] = 'Edson Bispo';
                            rep_local[2] = 'Alameda Terracota 215 - 5º andar – Conjuntos 518/519 - SALA 16 Bairro Cerâmica – São Caetano do Sul – SP';
                            rep_email[2] = 'edson1bispo@gmail.com';
-                           rep_telefone[2] = '(11) 95144-4550'; 
+                           rep_telefone[2] = '(11) 95144-4550'
+                           rep_nome[3] = 'Giovanni Nicoletti';
+                           rep_local[3] = 'Av. Princesa do Norte, 806 - Cidade Nova - Pindamonhangaba - SP';
+                           rep_email[3] = 'giovanni@g3hotelaria.com.br';
+                           rep_telefone[3] = '(12) 98155-0594'; 
       }
-        if (uf === 'ms') { html = 'do Mato Grosso do Sul'; }
+        if (uf === 'ms') { html = 'do Mato Grosso do Sul'; 
+                           rep_nome[0] = 'Thámerson Alves lima de Jesus';
+                           rep_local[0] = 'Endereço: Rua São João N: 245. Centro São João de Iracema CEP: 15315000';
+                           rep_email[0] = 'tandy_lima@icloud.com';
+                           rep_telefone[0] = '(17) 99628-4420';
+                           rep_nome[1] = 'Cristiane Medeiros Morales Mangini';
+                           rep_local[1] = 'Rua Antônio José Martins Filho 600, Apto 13 Córdoba CEP: 15092-230, São José do Rio Preto – SP';
+                           rep_email[1] = 'cristiane.medeiros2@icloud.com';
+                           rep_telefone[1] = '(17) 99741-3370'; 
+        }
         if (uf === 'go') { html = 'de Goiás'; }
         if (uf === 'mg') { html = 'de Minas Gerais'; }
-        if (uf === 'es') { html = 'do Espirito Santo'; }
+        if (uf === 'es') { html = 'do Espirito Santo'; 
+                           rep_nome[0] = 'Thámerson Alves lima de Jesus';
+                           rep_local[0] = 'Endereço: Rua São João N: 245. Centro São João de Iracema CEP: 15315000';
+                           rep_email[0] = 'tandy_lima@icloud.com';
+                           rep_telefone[0] = '(17) 99628-4420'; 
+                           rep_nome[1] = 'Cristiane Medeiros Morales Mangini';
+                           rep_local[1] = 'Rua Antônio José Martins Filho 600, Apto 13 Córdoba CEP: 15092-230, São José do Rio Preto – SP';
+                           rep_email[1] = 'cristiane.medeiros2@icloud.com';
+                           rep_telefone[1] = '(17) 99741-3370';}
         if (uf === 'pi') { html = 'do Piauí'; }
         if (uf === 'ce') { html = 'do Ceará'; 
                            rep_nome[0] = 'Antonio Roberto Campos Lobo';
                            rep_local[0] = 'Rua Celso Gomes 188 Centro, Iracema-CE CEP: 62980-000';
                            rep_email[0] = 'maestrorobertocampos@gmail.com';
-                           rep_telefone[0] = '(88) 99714-4747';           
+                           rep_telefone[0] = '(88) 99714-4747'; 
+                           rep_nome[1] = 'José Gil de Barros Cidrim Júnior';
+                           rep_local[1] = 'Rua Dr Francisco Gadelha 555 apto 301 Fortaleza -Ce Cep:60.811-120';
+                           rep_email[1] = 'gilcidrim@gmail.com';
+                           rep_telefone[1] = '(85) 98742-9554';             
       }
-        if (uf === 'rr') { html = 'de Roraima'; }
+        if (uf === 'rr') { html = 'de Roraima'; 
+                           rep_nome[0] = 'Paulo Andre';
+                           rep_local[0] = 'Av. Coronel Savio Belota, nº81, QD 366 CJ CN ET 4N – CEP: 69.098-270 – Bairro: Novo Aleixo, Manaus/AM';
+                           rep_email[0] = 'mp10rep@gmail.com';
+                           rep_telefone[0] = '(92) 98561–0000';
+                          }
         if (uf === 'to') { html = 'do Tocantins'; }
         if (uf === 'ma') { html = 'do Maranhão'; 
                            rep_nome[0] = 'Marcio Roberto Costa Silva';
@@ -833,7 +876,12 @@
                            rep_email[0] = 'ULOREPRESENTACOESLTDA@GMAIL.COM';
                            rep_telefone[0] = '(83) 98738-5019';                 
       }
-        if (uf === 'df') { html = 'do Distrito Federal'; }
+        if (uf === 'df') { html = 'do Distrito Federal'; 
+                           rep_nome[0] = 'Marcio Roberto Costa Silva';
+                           rep_local[0] = 'Rua do Norte 672, Goiabal São Luís, MA CEP: 65.026-135';
+                           rep_email[0] = 'mr7577@hotmail.com';
+                           rep_telefone[0] = '(98) 98197-7340'; 
+      }
         
         if (rep_nome[0] !== '') {
           document.getElementById("box0").style = 'block';
