--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                   <div class="card-body text-center d-flex flex-column align-items-center p-0">
                       <img class="mb-3 fit-cover" src="img/equipe/Cordimar.jpg" alt="Cordimar Braga" width="100%">
                       <h5 class="fw-bold text-primary card-title mb-0"><strong>Cordimar Braga</strong></h5>
-                      <p class="text-muted card-text mb-2">Consultor Comercial</p>
+                      <p class="text-muted card-text mb-2">Gerente Comercial</p>
                   </div>
               </div>
           </div>
