Changes on projects

--- a/ensino.html
+++ b/ensino.html
@@ -201,7 +201,7 @@
                 equipe de especialistas em educação, tecnologia e design, reunidos 
                 em vários países, tornando essa incrível solução educacional um 
                 dos maiores e mais completos projetos de ensino em 3D do mercado 
-                brasileiro e mundial. Através de um rico baco de dados compostos 
+                brasileiro e mundial. Através de um rico banco de dados compostos 
                 por imagens, vídeos e atividades que contemplam todas as matérias, 
                 somados a tecnologia 3D ativa proporcionada pelos nossos óculos, 
                 permitem aos alunos observarem as mais profundas particularidades 
