--- a/mapas.html
+++ b/mapas.html
@@ -757,7 +757,11 @@
                            rep_nome[2] = 'Cristiane Medeiros Morales Mangini';
                            rep_local[2] = 'Rua Antônio José Martins Filho 600, Apto 13 Córdoba CEP: 15092-230, São José do Rio Preto – SP';
                            rep_email[2] = 'cristiane.medeiros2@icloud.com';
-                           rep_telefone[2] = '(17) 99741-3370';; 
+                           rep_telefone[2] = '(17) 99741-3370';
+                           rep_nome[3] = 'Salatiel da Silva Sobral';
+                           rep_local[3] = 'Rua das Azaleias 3671-Jardim das Violetas Cep : 78552-192 - MT';
+                           rep_email[3] = 'salatielmeta@hotmail.com';
+                           rep_telefone[3] = '(66) 99255-2080 | 66 99914-7711 | 82 98877-0522';
       }
         if (uf === 'ro') { html = 'de Rondônia'; 
                            rep_nome[0] = 'Gustavo Rosa';
@@ -773,10 +777,24 @@
                            rep_telefone[0] = '(92) 98561–0000';
       }
         if (uf === 'ap') { html = 'do Amapá'; }
-        if (uf === 'rj') { html = 'do Rio de Janeiro'; }
+        if (uf === 'rj') { html = 'do Rio de Janeiro'; 
+                           rep_nome[0] = 'Thámerson Alves lima de Jesus';
+                           rep_local[0] = 'Endereço: Rua São João N: 245. Centro São João de Iracema CEP: 15315000';
+                           rep_email[0] = 'tandy_lima@icloud.com';
+                           rep_telefone[0] = '(17) 99628-4420'; 
+                           rep_nome[1] = 'Cristiane Medeiros Morales Mangini';
+                           rep_local[1] = 'Rua Antônio José Martins Filho 600, Apto 13 Córdoba CEP: 15092-230, São José do Rio Preto – SP';
+                           rep_email[1] = 'cristiane.medeiros2@icloud.com';
+                           rep_telefone[1] = '(17) 99741-3370'; 
+        }
         if (uf === 'rs') { html = 'do Rio Grande do Sul'; }
         if (uf === 'sc') { html = 'de Santa Catarina'; }
-        if (uf === 'pr') { html = 'do Paraná'; }
+        if (uf === 'pr') { html = 'do Paraná'; 
+                           rep_nome[0] = 'Salatiel da Silva Sobral';
+                           rep_local[0] = 'Rua das Azaleias 3671-Jardim das Violetas Cep : 78552-192 - MT';
+                           rep_email[0] = 'salatielmeta@hotmail.com';
+                           rep_telefone[0] = '(66) 99255-2080 | 66 99914-7711 | 82 98877-0522';
+        }
         if (uf === 'sp') { html = 'de São Paulo'; 
                            rep_nome[0] = 'Thámerson Alves lima de Jesus';
                            rep_local[0] = 'Endereço: Rua São João N: 245. Centro São João de Iracema CEP: 15315000';
@@ -803,10 +821,27 @@
                            rep_nome[1] = 'Cristiane Medeiros Morales Mangini';
                            rep_local[1] = 'Rua Antônio José Martins Filho 600, Apto 13 Córdoba CEP: 15092-230, São José do Rio Preto – SP';
                            rep_email[1] = 'cristiane.medeiros2@icloud.com';
-                           rep_telefone[1] = '(17) 99741-3370'; 
+                           rep_telefone[1] = '(17) 99741-3370'
+                           rep_nome[2] = 'Salatiel da Silva Sobral';
+                           rep_local[2] = 'Rua das Azaleias 3671-Jardim das Violetas Cep : 78552-192 - MT';
+                           rep_email[2] = 'salatielmeta@hotmail.com';
+                           rep_telefone[2] = '(66) 99255-2080 | 66 99914-7711 | 82 98877-0522'; 
         }
         if (uf === 'go') { html = 'de Goiás'; }
-        if (uf === 'mg') { html = 'de Minas Gerais'; }
+        if (uf === 'mg') { html = 'de Minas Gerais'; 
+                           rep_nome[0] = 'Andressa Ribeiro de Novaes';
+                           rep_local[0] = 'Rua Luiz Gonzaga, Loteamento São Paulo, Barreiras CEP 47807067';
+                           rep_email[0] = 'andressa.novaes13@outlook.com';
+                           rep_telefone[0] = ''
+                           rep_nome[1] = 'Thámerson Alves lima de Jesus';
+                           rep_local[1] = 'Endereço: Rua São João N: 245. Centro São João de Iracema CEP: 15315000';
+                           rep_email[1] = 'tandy_lima@icloud.com';
+                           rep_telefone[1] = '(17) 99628-4420';
+                           rep_nome[2] = 'Cristiane Medeiros Morales Mangini';
+                           rep_local[2] = 'Rua Antônio José Martins Filho 600, Apto 13 Córdoba CEP: 15092-230, São José do Rio Preto – SP';
+                           rep_email[2] = 'cristiane.medeiros2@icloud.com';
+                           rep_telefone[2] = '(17) 99741-3370'; 
+        }
         if (uf === 'es') { html = 'do Espirito Santo'; 
                            rep_nome[0] = 'Thámerson Alves lima de Jesus';
                            rep_local[0] = 'Endereço: Rua São João N: 245. Centro São João de Iracema CEP: 15315000';
@@ -869,6 +904,14 @@
                            rep_local[5] = 'COND. EMPRESARIAL MIGUEL SEABRA FAGUNDES – Sala 804 - Rua Paulo Barros de Goes, 1840 – Lagoa Nova - CEP: 59064-460 / Natal-RN';
                            rep_email[5] = 'cordimar.braga@grupofan.com';
                            rep_telefone[5] = '(84) 98188-0020'; 
+                           rep_nome[6] = 'José Gil de Barros Cidrim Júnior';
+                           rep_local[6] = 'Rua Dr Francisco Gadelha 555 apto 301 Fortaleza -Ce Cep:60.811-120';
+                           rep_email[6] = 'gilcidrim@gmail.com';
+                           rep_telefone[6] = '(85) 98742-9554';
+                           rep_nome[7] = 'Antonio Roberto Campos Lobo';
+                           rep_local[7] = 'Rua Celso Gomes 188 Centro, Iracema-CE CEP: 62980-000';
+                           rep_email[7] = 'maestrorobertocampos@gmail.com';
+                           rep_telefone[7] = '(88) 99714-4747'; 
       }
         if (uf === 'pb') { html = 'da Paraíba'; 
                            rep_nome[0] = 'UBIRATAN LEAL DE OLIVEIRA';
