--- a/robotica.html
+++ b/robotica.html
@@ -219,8 +219,7 @@
               <p class="mb-4" Align="justify">
                 Oferecemos várias opções de laboratório, cada um direcionado ao nível de ensino (Ensino infantil. Fundamental I - A e B,
                 Fundamental II e Ensino Médio), podendo atender por vez um grupo de 3 a 5 alunos. Além disso, temos a opção de super 
-                laboratórios, destinados ao Ensino Fundamental I e II e ao Ensino Médio, ambos atendem por vez grupos com faixa etária
-                de até 40 anos.
+                laboratórios, destinados ao Ensino Fundamental I e II e ao Ensino Médio, ambos atendem por vez grupos com faixa de 40 anos.
               </p>
               <a style="width: 100%;" href="https://drive.google.com/file/d/1lAqCAeU42z7NeHg3VXBJbdrKOiTIVZeY/view?usp=share_link" class="btn btn-primary">Acesse o folder</a>
             </div>
