--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
           height: inherit;
           background-color: cyan;
       }
+      .video-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+  }
+  .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
   </style>
     <meta charset="utf-8" />
     <title>Feeling</title>
@@ -251,13 +265,13 @@
 
                 <div class="col-sm-6"> 
                   <h3 class="fs-5 text-primary">Presente em</h3>
-                  <h3 class="display-5" data-toggle="counter-up"> 18</h3>
+                  <h3 class="display-5" data-toggle="counter-up"> 19</h3>
                   <h3 class="fs-5 text-primary">Estados</h3>
                 </div>
 
                 <div class="col-sm-6">
                   <h3 class="fs-5 text-primary">Atuando em</h3> 
-                  <h3 class="display-5" data-toggle="counter-up">4</h3>
+                  <h3 class="display-5" data-toggle="counter-up">5</h3>
                   <h3 class="fs-5 text-primary">das 5 regiões brasileiras</h3>   
                 </div>
 
@@ -267,7 +281,25 @@
         </div>
       </div>
     </div>
+    <div class="container-fluid wow fadeIn" data-wow-delay="0.1s" style="background-color: #F58634;">
+      <div class="container py-4">
+        <div class="row">
+          <div class="col-lg-12 wow fadeIn" data-wow-delay="0.3s">
+            <h1 style="text-align: center; color: white">Workshop Grupo Feeling</h1>    
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <div class="video-container">
+     <iframe 
+        src="https://www.youtube.com/embed/MPIGCm3QqKU?modestbranding=1&rel=0"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+    </iframe>
+    </div>
 
     <div class="container-fluid wow fadeIn" data-wow-delay="0.1s" style="background-color: #F58634;">
       <div class="container py-4">
@@ -441,7 +473,7 @@
               </div>
           </div>
       </div>
-      <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-lg-4">
+      <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-lg-4  justify-content-center">
           <div class="col">
               <div class="card border-0 shadow-none">
                   <div class="card-body text-center d-flex flex-column align-items-center p-0">
@@ -460,15 +492,7 @@
                   </div>
               </div>
           </div>
-          <div class="col">
-            <div class="card border-0 shadow-none">
-                <div class="card-body text-center d-flex flex-column align-items-center p-0">
-                    <img class="mb-3 fit-cover" src="img/equipe/Gustavo.jpg" alt="Gustavo Fernandes" width="100%">
-                    <h5 class="fw-bold text-primary card-title mb-0"><strong>Gustavo Fernandes</strong></h5>
-                    <p class="text-muted card-text mb-2">Coordenador Pedagógico</p>
-                </div>
-            </div>
-        </div>
+
         <div class="col">
           <div class="card border-0 shadow-none">
               <div class="card-body text-center d-flex flex-column align-items-center p-0">
