--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                       src="img/icon/Portfolio.jpg"
                       alt=""
                     />
-                    <h5 class="mb-0">Portifólio</h5>
+                    <h5 class="mb-0">Portfólio</h5>
                   </div>
                 </div>
               </div>
