--- a/mapas.html
+++ b/mapas.html
@@ -724,7 +724,7 @@
                            rep_nome[2] = 'Andressa Ribeiro de Novaes';
                            rep_local[2] = 'Rua Luiz Gonzaga, Loteamento São Paulo, Barreiras CEP 47807067';
                            rep_email[2] = 'andressa.novaes13@outlook.com';
-                           rep_telefone[2] = '';
+                           rep_telefone[2] = '77 99801‑8307';
       }
         if (uf === 'se') { html = 'do Sergipe'; 
                            rep_nome[0] = 'Antônio Márcio de Araujo Silva';
@@ -762,6 +762,10 @@
                            rep_local[3] = 'Rua das Azaleias 3671-Jardim das Violetas Cep : 78552-192 - MT';
                            rep_email[3] = 'salatielmeta@hotmail.com';
                            rep_telefone[3] = '(66) 99255-2080 | 66 99914-7711 | 82 98877-0522';
+                           rep_nome[4] = 'Fabio Coffy Bronzatti';
+                           rep_local[4] = 'Av. Dr. José Feliciano de Figueiredo n200 apto 2103, Bairro Porto, Cuiaba - MT CEP 78025-360';
+                           rep_email[4] = 'fabiobronzatti@hotmail.com ';
+                           rep_telefone[4] = '65 99249‑8399';
       }
         if (uf === 'ro') { html = 'de Rondônia'; 
                            rep_nome[0] = 'Gustavo Rosa';
@@ -832,7 +836,7 @@
                            rep_nome[0] = 'Andressa Ribeiro de Novaes';
                            rep_local[0] = 'Rua Luiz Gonzaga, Loteamento São Paulo, Barreiras CEP 47807067';
                            rep_email[0] = 'andressa.novaes13@outlook.com';
-                           rep_telefone[0] = ''
+                           rep_telefone[0] = '77 99801‑8307'
                            rep_nome[1] = 'Thámerson Alves lima de Jesus';
                            rep_local[1] = 'Endereço: Rua São João N: 245. Centro São João de Iracema CEP: 15315000';
                            rep_email[1] = 'tandy_lima@icloud.com';
