--- a/index.html
+++ b/index.html
@@ -207,11 +207,15 @@
       </div>
     </nav>
 
-    <div class="auto">
-      <video id="vid" width="100%" height="100%" autoplay muted controls>
-        <source src="video/Institucional.mp4" type="video/mp4">
-      </video>
-    </div>
+    <div class="video-container">
+      <iframe 
+          src="https://www.youtube.com/embed/MPIGCm3QqKU?modestbranding=1&rel=0&autoplay=1&mute=1"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen>
+      </iframe>
+  </div>
 
     <div class="container-fluid py-5" style="background-color: #F58634;">
       <div class="container">
@@ -280,25 +284,6 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="container-fluid wow fadeIn" data-wow-delay="0.1s" style="background-color: #F58634;">
-      <div class="container py-4">
-        <div class="row">
-          <div class="col-lg-12 wow fadeIn" data-wow-delay="0.3s">
-            <h1 style="text-align: center; color: white">Workshop Grupo Feeling</h1>    
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="video-container">
-     <iframe 
-        src="https://www.youtube.com/embed/MPIGCm3QqKU?modestbranding=1&rel=0"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen>
-    </iframe>
     </div>
 
     <div class="container-fluid wow fadeIn" data-wow-delay="0.1s" style="background-color: #F58634;">
