--- a/ciencia.html
+++ b/ciencia.html
@@ -206,7 +206,7 @@
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                Mapas e peças de exposição do corpo humano, materias para estudo 
+                Mapas e peças de exposição do corpo humano, materiais para estudo 
                 prático das reações químicas e físicas, ferramentas para o estudo 
                 da microbiologia, cadernos de atividade para os alunos e cadernos 
                 específicos do professor.
