David está errado: GERENTE ADMINISTRATIVO

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                   <div class="card-body text-center d-flex flex-column align-items-center p-0">
                       <img class="mb-3 fit-cover" src="img/equipe/David.jpg" alt="David" width="100%">
                       <h5 class="fw-bold text-primary card-title mb-0"><strong>David</strong></h5>
-                      <p class="text-muted card-text mb-2">Assessor Administrativo</p>
+                      <p class="text-muted card-text mb-2">Gerente Administrativo</p>
                   </div>
               </div>
           </div>
